[gd_scene load_steps=2 format=3 uid="uid://dm7b51pbx07u5"]

[ext_resource type="Script" uid="uid://clny8kurfcob4" path="res://PetMenu.gd" id="1_jjrm6"]

[node name="PetMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jjrm6")

[node name="TalkButton" type="Button" parent="."]
layout_mode = 0
offset_top = -60.0
offset_right = 8.0
offset_bottom = -52.0

[node name="InteractButton" type="Button" parent="."]
layout_mode = 0
offset_left = -60.0
offset_right = -52.0
offset_bottom = 8.0

[node name="ScheduleButton" type="Button" parent="."]
layout_mode = 0
offset_left = 60.0
offset_right = 68.0
offset_bottom = 8.0
